[project]
name = "panstack"
version = "0.0.1"
description = "Compute controllable action-pan composites from burst RAWs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rawpy",
  "opencv-python",
  "numpy",
  "tifffile",
]

[project.scripts]
panstack = "panstack.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
panstack = ["models/*"]
